--- a/Mouse_gd_test.ipynb
+++ b/Mouse_gd_test.ipynb
@@ -41,10 +41,10 @@
    "outputs": [],
    "source": [
     "# In[2]:\n",
-    "gex_datatype = 'h5ad'\n",
+    "gex_datatype = '10x_h5'\n",
     "organism = 'mouse_gd'\n",
     "\n",
-    "gex_1 = \"/Volumes/Stefan_SSD/WorkingAtHome/conga_trials/mouse_IELs/seurat_objs/SS_Apc_agg_all.h5ad\"\n",
+    "gex_1 = \"/Volumes/Stefan_SSD/WorkingAtHome/conga_trials/mouse_IELs/seurat_objs/SS6_Apc_filtered_feature_bc_matrix.h5\"\n",
     "tcr_1 = '/Volumes/Stefan_SSD/WorkingAtHome/conga_trials/mouse_IELs/vdj/metadata_gd.csv'\n",
     "cf_1 = '/Volumes/Stefan_SSD/WorkingAtHome/conga_trials/mouse_IELs/outs/SS6_Apc_stringentOn_clones_TCRgd.tsv'\n",
     "op_1 = '/Volumes/Stefan_SSD/WorkingAtHome/conga_trials/mouse_IELs/outs/SS6_Apc_stringentOn_TCRgd'\n",
@@ -565,13 +565,6 @@
     "#batch files\n",
     "make_10x_clones_file_batch( tcr_1, organism, cf_1 , stringent = True, include_gammadelta = True) "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
